apps/2048.yaml
kind: Service
apiVersion: v1
metadata:
 name: game-2048
 namespace: games
 labels:
   app: '2048'
spec:
 selector:
   app: '2048'
 ports:
 - name: http
   port: 8080
   targetPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
 name: game-2048
 namespace: games
 labels:
   app: '2048'
spec:
 selector:
   matchLabels:
     app: '2048'
 replicas: 1
 template:
   metadata:
     labels:
       app: '2048'
   spec:
     containers:
     - name: '2048'
       image: alexwhen/docker-2048
       imagePullPolicy: Always
       resources:
         requests:
           memory: 128Mi
           cpu: "100m"
         limits:
           memory: 256Mi
           cpu: "200m"
       ports:
       - name: http
         containerPort: 80
