apps/tetris.yaml
kind: Service
apiVersion: v1
metadata:
 name: game-tetris
 namespace: games
 labels:
   app: 'tetris'
spec:
 selector:
   app: 'tetris'
 ports:
 - name: http
   port: 80
   targetPort: 80
---
kind: Deployment
apiVersion: apps/v1
metadata:
 name: game-tetris
 namespace: games
 labels:
   app: 'tetris'
spec:
 selector:
   matchLabels:
     app: 'tetris'
 replicas: 1
 template:
   metadata:
     labels:
       app: 'tetris'
   spec:
     containers:
     - name: 'tetris'
       image: lrakai/tetris:hostname
       imagePullPolicy: Always
       resources:
         requests:
           memory: 128Mi
           cpu: "100m"
         limits:
           memory: 256Mi
           cpu: "200m"
       ports:
       - name: http
         containerPort: 80
