apps/bookstore.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: bookstore
---
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: bookstore
    name: booksapi
    labels:
        app: bookstore
spec:
    replicas: 2
    selector:
        matchLabels:
            app: bookstore
    template:
        metadata:
            annotations:
                prometheus.io/scrape: "true"
                prometheus.io/port: "80"
            labels:
                app: bookstore
        spec:
            containers:
            - name: books-api
              image: 0gis0/books-api
              ports:
               - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: booksapi-svc
    namespace: bookstore
spec:
    selector:
        app: bookstore
    ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: booksapi
    namespace: bookstore
spec:
    rules:
    - host: booksapi.163.117.64.35.nip.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: booksapi-svc
              port: 
                number: 80
