apps/ingress-games.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 namespace: games
 name: 'ingress-games'
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/proxy-body-size: 128m
spec:
 rules:
 - host: 'prueba.2048.com'
   http:
     paths:
     - backend:
         service:
           name: game-2048
           port:
             number: 8080
       path: /
       pathType: Prefix
 - host: 'prueba.tetris.com'
   http:
     paths:
     - backend:
         service:
           name: game-tetris
           port:
             number: 80
       path: /
       pathType: Prefix
 #tls:
 #- hosts:
   #- foo.bar.2048.com
   #- foo.bar.tetris.com
